@@ -1,3 +1,13 @@
+2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b19
+
+ * New: Added arrowkey navigation for microthumbs.
+
+ * Fix: Mail-links to owner in stats were bad HTML.
+
+ * Change: Added CSS classes for arrows in navigation.
+
+ * Fix: Typo in lib/voting.php
+
 2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b18
 
  * Fix: Imagemap
